# Cat-and-mouse

./: .gitignore  CMakeLists.txt  Darkest_Troj.c  Darkest_Troj.h  Darkest_load.c  Darkest_load.h  Darkest_loader.c  Darkest_pay.c  Darkest_pay.h  Darkest_updater.c  Evasion_and_detection.docx  README.md  library.c  library.h  main.c  ntlib.c  ntlib.h
